# gksalliance

./: .env.example  .gitignore  Dockerfile  README.md  UsedCommands.md  docker-compose.yml  gksalliance.md  manage.py  postmancoll.json  prestart.sh  pyproject.toml  requirements.txt  test_entry.sh
alliance_project/: settings.py  wsgi.py
tasks/: authentication.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
tasks/management/commands/: create_test_data.py
tasks/migrations/: 0001_initial.py
